modified:   13. Django- Ecommerce Website/ecommerce/cart/templates/cart/checkout.html 	modified:   13. Django- Ecommerce Website/ecommerce/db.sqlite3 	new file:   13. Django- Ecommerce Website/ecommerce/media/uploads/products/sandals-587185_1280.jpg 	new file:   13. Django- Ecommerce Website/ecommerce/media/uploads/products/shoe-4585071_1280.jpg 	new file:   13. Django- Ecommerce Website/ecommerce/media/uploads/products/shoe-506826_1280.jpg 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/admin.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/models.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-311.pyc 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/__pycache__/0001_initial.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/views.py

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html
@@ -37,7 +37,7 @@
             <h3>{{ product.name }}</h3>
             
             {% if product.is_sale %}
-            <h4><del>Price: $ {{ product.price }}</del> &nbsp; $ {{ product.sale_price }}</h4>
+            <h4>Price: <del> $ {{ product.price }}</del> &nbsp; $ {{ product.sale_price }}</h4>
             {% else %}
             <h4>Price: $ {{ product.price }}</h4>
             {% endif %}
