modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/urls.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/footer.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/new.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/urls.py 	modified:   13. Django- Ecommerce Website/ecommerce/store/views.py

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/footer.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/footer.html
@@ -20,10 +20,10 @@
         <div class="footer-column">
             <h5>Category</h5>
             <ul>
-                <li><a href="#"><span>&gt;</span> New</a></li>
+                <li><a href="{% url 'new_products' %}"><span>&gt;</span> New</a></li>
                 <li><a href="#"><span>&gt;</span> Ex UK</a></li>
                 <li><a href="#"><span>&gt;</span> Kenya</a></li>
-                <li><a href="#"><span>&gt;</span> New</a></li>
+                <li><a href="{% url 'new_products' %}"><span>&gt;</span> New</a></li>
                 <li><a href="#"><span>&gt;</span> Ex UK</a></li>
                 <li><a href="#"><span>&gt;</span> Kenya</a></li>
             </ul>
