modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/header.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/new.html

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
@@ -9,11 +9,7 @@
 
 {% block content %}
 <div class="container">
-    <header>
-        <div class="hero-header">
-            <h1>bellaDIAMONDS</h1>
-        </div>
-    </header>
+    {% include 'store/header.html' %}
 
     <section>
         <h3 class="section-title">Products</h3>
