modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/views.py

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
@@ -22,7 +22,7 @@
 
     <section>
         <!-- Render products on sale -->
-        <h3 class="section-title">Products on Sale</h3>
+        <h3 class="section-title"><a href="{% url 'sale_products' %}"></a>Products on Sale</h3>
         <div class= "product-container">
         {% for product in sale %}
             {% include 'store/product_card.html' %} 
