modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/urls.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/featured.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/new.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/sale.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/urls.py 	modified:   13. Django- Ecommerce Website/ecommerce/store/views.py

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
@@ -22,7 +22,7 @@
 
     <section>
         <!-- Render products on sale -->
-        <h3 class="section-title"><a href="{% url 'sale_products' %}"></a>Products on Sale</h3>
+        <h3 class="section-title"><a href="{% url 'sale' %}">Products on Sale</a></h3>
         <div class= "product-container">
         {% for product in sale %}
             {% include 'store/product_card.html' %} 
@@ -31,7 +31,7 @@
     </section>
 
     <section>
-        <h3 class="section-title">New Products</h3>
+        <h3 class="section-title"><a href="{% url 'new_products' %}">New Products</a></h3>
         <div class= "product-container">
         <!-- Render new products -->
         {% for product in new %}
@@ -41,7 +41,7 @@
     </section>
 
     <section>
-        <h3 class="section-title">Featured Products</h3>
+        <h3 class="section-title"><a href="{% url 'featured' %}">Featured Products</a></h3>
         <div class= "product-container">
         {% for product in featured %}
             {% include 'store/product_card.html' %}
