--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/featured.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/featured.html
@@ -7,12 +7,10 @@
     
 
 {% block content %}
-
 <div class="container">
-    
     {% include 'store/header.html' %}
-    
     <div class= "product-container">   
+        <h1>Featured Products</h1>
         {% for product in products %}
             {% include 'store/product_card.html' %} 
         {% endfor %}
