--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/sale.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/sale.html
@@ -7,11 +7,9 @@
     
 
 {% block content %}
-
 <div class="container">
-    
     {% include 'store/header.html' %}
-    
+    <h1>Products on sale</h1>
     <div class= "product-container">   
         {% for product in products %}
             {% include 'store/product_card.html' %} 
