modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/featured.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/new.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/sale.html

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/featured.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/sections/featured.html
@@ -9,8 +9,8 @@
 {% block content %}
 <div class="container">
     {% include 'store/header.html' %}
+    <h3 class="section-title">Featured Products</h3>
     <div class= "product-container">   
-        <h1>Featured Products</h1>
         {% for product in products %}
             {% include 'store/product_card.html' %} 
         {% endfor %}
