modified:   13. Django- Ecommerce Website/ecommerce/db.sqlite3 	new file:   13. Django- Ecommerce Website/ecommerce/media/uploads/products/shoe-2258549_1280.jpg 	new file:   13. Django- Ecommerce Website/ecommerce/media/uploads/products/sneaker-669378_1280.jpg 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/main.css 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/product.css 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/footer.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/header.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/views.py

--- a/13. Django- Ecommerce Website/ecommerce/static/css/main.css
+++ b/13. Django- Ecommerce Website/ecommerce/static/css/main.css
@@ -30,7 +30,7 @@ button {
 
 .container {
     min-height: 100vh;
-    background-color: orange;
+    background-color: #17696a;
     width: 95%;
     margin: 3em auto;
     margin-bottom: 2em;
@@ -99,10 +99,7 @@ header .hero-header{
 
 .product-image img {
     width: 100%;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-    max-width: 300px;
+    max-height: 200px;
 }
 
 .product-information {
