--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/footer.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/footer.html
@@ -12,8 +12,9 @@
         <div class="footer-column">
             <h5>Products</h5>
             <ul>
-                <li><a href="#"><span>&gt;</span> On Sale</a></li>
-                <li><a href="#"><span>&gt;</span> New Products</a></li>
+                <li><a href="{% url 'sale' %}"><span>&gt;</span> On Sale</a></li>
+                <li><a href="{% url 'new_products' %}"><span>&gt;</span> New Products</a></li>
+                <li><a href="{% url 'featured' %}"><span>&gt;</span> Featured</a></li>
                 <li><a href="#"><span>&gt;</span> Coming Soon</a></li>
             </ul>
         </div>
