--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/header.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/header.html
@@ -1,6 +1,6 @@
 
     <header>
         <div class="hero-header">
-            <h1>bellaDIAMONDS</h1>
+            <h1>DIAMONDBELLS</h1>
         </div>
     </header>
