modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/views.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html 	modified:   13. Django- Ecommerce Website/ecommerce/cart/views.py 	modified:   13. Django- Ecommerce Website/ecommerce/db.sqlite3 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/cart.css 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/admin.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/admin.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/models.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/models.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/admin.py 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/0002_remove_customer_address_remove_customer_first_name_and_more.py 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/0003_alter_shippingaddress_options_and_more.py 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/__pycache__/0002_remove_customer_address_remove_customer_first_name_and_more.cpython-311.pyc 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/__pycache__/0002_remove_customer_address_remove_customer_first_name_and_more.cpython-312.pyc 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/__pycache__/0003_alter_shippingaddress_options_and_more.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/models.py 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html

--- a/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
+++ b/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
@@ -23,24 +23,30 @@
                     </tr>
                 </thead>
             </table>
-
+            
+                        
             <div class="cart-elements-container">
                 <div class="cart-element-header">
                     <div class="cart-item-image"></div>
                     <div class="cart-item-name"><strong>Item</strong></div>
+                    <div class="cart-item-price"><strong>Price</strong></div>
                     <div class="cart-item-quantity"><strong>Quantity</strong></div>
                     <div class="cart-item-total"><strong>Total</strong></div>
                 </div>
                 <hr>
+                {% for item in items %}  
                 <div class="cart-element">
-                    <div class="cart-item-image"><img src="{% static 'images/apples-805124.jpg' %}" alt="" width="20%"></div>
-                    <div class="cart-item-name">Product 1</div>
-                    <div class="cart-item-quantity">3 
+                    <div class="cart-item-image"><img src="{{item.product.imageURL}}" alt="" width="20%"></div>
+                    <div class="cart-item-name">{{item.product.name}}</div>
+                    <div class="cart-item-price">$ {{item.product.price}}</div>
+                    <div class="cart-item-quantity">{{item.quantity}} 
                         <p><span>&#9652</span><span>&#9662</span></p>
                     </div>
-                    <div class="cart-item-total">$ 30</div>
+                    <div class="cart-item-total">$ {{item.get_total}}</div>
                 </div>
+                {% endfor %}
             </div>
+            
         </div>
     </div>
 {% endblock content %}
