--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html
@@ -17,13 +17,13 @@
                 </div>
     
                 <div class="product-page-image">
-                    <img src="{{product.image.url}}" alt="Product" width="100%">
+                    <img src="{{product.imageURL}}" alt="Product" width="100%">
                 </div>
                 <div class="product-page-images">
-                    <div class="image"><img src="{{product.image.url}}" alt="Product" width="100%"></div>
-                    <div class="image"><img src="{{product.image.url}}" alt="Product" width="100%"></div>
-                    <div class="image"><img src="{{product.image.url}}" alt="Product" width="100%"></div>
-                    <div class="image"><img src="{{product.image.url}}" alt="Product" width="100%"></div>
+                    <div class="image"><img src="{{product.imageURL}}" alt="Product" width="100%"></div>
+                    <div class="image"><img src="{{product.imageURL}}" alt="Product" width="100%"></div>
+                    <div class="image"><img src="{{product.imageURL}}" alt="Product" width="100%"></div>
+                    <div class="image"><img src="{{product.imageURL}}" alt="Product" width="100%"></div>
                     
                 </div>
             </div>
