--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html
@@ -6,7 +6,7 @@
     <div class="product-card">
         <a href="{% url 'product' product.id %}">
         <div class="product-image">
-            <img src="{{ product.image.url }}" alt="">
+            <img src="{{ product.imageURL }}" alt="">
         </div></a>
         <div class="product-information">
             <p>{{ product.name }}</p>
