--- a/13. Django- Ecommerce Website/ecommerce/static/css/cart.css
+++ b/13. Django- Ecommerce Website/ecommerce/static/css/cart.css
@@ -41,11 +41,11 @@ table .checkout {
 
 
 .cart-item-image, .cart-item-name{
-    flex: 30%;
+    flex: 25%;
 }
 
-.cart-item-quantity, .cart-item-total{
-    flex: 20%;
+.cart-item-price, .cart-item-quantity, .cart-item-total{
+    flex: 15%;
 }
 
 .cart-item-quantity p {
