--- a/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
+++ b/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
@@ -17,8 +17,8 @@
                 <hr>
                 <thead>
                     <tr>
-                        <th>Items: <strong>5</strong></th>
-                        <th>Total: <strong>$ 500</strong></th>
+                        <th>Items: <strong>{{order.get_cart_items}}</strong></th>
+                        <th>Total: <strong>$ {{order.get_cart_total}}</strong></th>
                         <th class="checkout"><a href="{% url 'checkout' %}"><button type="button">Checkout</button></a></th>
                     </tr>
                 </thead>
