modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/views.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/urls.py 	modified:   13. Django- Ecommerce Website/ecommerce/cart/views.py 	modified:   13. Django- Ecommerce Website/ecommerce/static/js/cart.js 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html
@@ -14,7 +14,7 @@
         </div>
         <div class="card-buttons">
             <a href="{% url 'product' product.id %}"><button type="button" id="product-view">View</button></a>
-            <a href="#"><button type="button" id="add-cart">Add to Cart</button></a>
+            <a href="#"><button type="button" data-product="{{product.id}}" data-action="add" class="add-cart" id="add-cart">Add to Cart</button></a>
         </div>
     </div>
 {% else %}
