modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/cart.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/views.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/cart.py 	modified:   13. Django- Ecommerce Website/ecommerce/cart/views.py 	modified:   13. Django- Ecommerce Website/ecommerce/db.sqlite3 	modified:   13. Django- Ecommerce Website/ecommerce/static/js/cart.js 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
@@ -28,8 +28,14 @@
 
     
     <script src="{% static 'js/navbar.js' %}"></script>
-    <script src="{% static 'js/cart.js' %}"></script>
 
+    
+    <script>
+        var cartAddUrl = "{% url 'cart_add' %}";
+        var cartQuantity = "{{ cart_quantity }}";
+        var csrfToken = "{{ csrf_token }}";
+    </script>
+    <script src="{% static 'js/cart.js' %}"></script>
     
     
 </body>
