--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html
@@ -57,7 +57,7 @@
                 <div class="quantity">
                     <input type="number" value="1" min="1">
                     
-                    <button type="button" id="add-cart">Add to Cart</button>
+                    <button type="button" value="{{ product.id }}" id="add-cart" class="add-cart">Add to Cart</button>
                 </div>
             </div>
         </div>
