modified:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   13. Django- Ecommerce Website/ecommerce/db.sqlite3 	modified:   13. Django- Ecommerce Website/ecommerce/static/js/cart.js 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html
@@ -8,6 +8,7 @@
 <div class="container">
     <div class="form-container authenticate">
         <form action="{% url 'login' %}" method="POST" class="login-form">
+            {% csrf_token %}
             <div class="img">
                 <span id="close" class="close"><a href="{% url 'home' %}">&times;</a></span>
                 <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
