--- a/12.Ecommerce Website Templates - HTML, CSS, JS/css/product.css
+++ b/12.Ecommerce Website Templates - HTML, CSS, JS/css/product.css
@@ -1,4 +1,4 @@
-.product-container {
+.product-page-container {
     display: flex;
     justify-content: space-between;
     padding: 2em;
@@ -11,7 +11,7 @@
   width: 40%;
 }
 
-.profile-image img{
+.product-profile-image img{
   border-radius: 4px;
 }
 
@@ -30,19 +30,19 @@
   border-radius: 3px;
 }
 
-.product-information {
+.product-page-information {
   width: 60%;
   padding-left: 2em;
 }
 
-.product-information h3 {
+.product-page-information h3 {
   font-size: 2rem;
   font-family: Lato;
   font-weight: 600;
   line-height: 130%;
 }
   
-.product-information h4 {
+.product-page-information h4 {
   font-size: 1.5rem;
   font-family: Lato;
   font-weight: 500;
@@ -50,11 +50,11 @@
   margin: .4em 0;
 }
 
-.product-information del {
+.product-page-information del {
   color: #a9a9a9;
 }
 
-.product-information p {
+.product-page-information p {
   color: #424551;
   margin: 1em 0;
 }
@@ -94,7 +94,7 @@ button:hover {
 }
 
 @media (max-width: 600px) {
-  .product-container {
+  .product-page-container {
       display: block;
       padding: .5em;
   }
@@ -104,7 +104,7 @@ button:hover {
       width: 100%;
   }
 
-  .product-information {
+  .product-page-information {
       width: 100%;
       padding-left: .5em;
       margin-top: 1em;
