modified:   12.Ecommerce Website Templates - HTML, CSS, JS/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="{% static 'css/product.css' %}">
 </head>
 <body>
-    
+    {% include 'store/include/navbar.html' %}
     {% block content %}
         
     {% endblock content %}
+    {% include 'store/include/footer.html' %}
         
 </body>
 </html>
