--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="{% static 'css/product.css' %}">
 </head>
 <body>
+    <div class="body-container">
     {% include 'store/include/navbar.html' %}
+    <div class="container">
     {% block content %}
         
     {% endblock content %}
+    </div>
     {% include 'store/include/footer.html' %}
+    </div>
         
 </body>
 </html>
