new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/card.html 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/hero.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/product_card.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html
@@ -7,7 +7,7 @@
     
 
 {% block content %}
-    <h1>Home</h1>
+    {% include 'store/card.html' %}
     <a href="{% url 'checkout' %}">checkout</a>
     <a href="{% url 'cart' %}">cart</a>
 {% endblock content %}
