modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/main.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/cart.css
@@ -1,6 +1,7 @@
 .cart-container {
     width: 80%;
     margin: 0 auto;
+    background-color: aliceblue;
 }
 
 table {
@@ -53,6 +54,10 @@ table .checkout {
 
 .cart-item-quantity p span{
     display: block;
+}
+
+.cart-container button {
+    padding: .5em 1em;
 }
 
 
