--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/main.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/main.css
@@ -61,6 +61,10 @@ header .hero-header{
     }
 }
 
+button {
+  background-color: var(--main-color);
+  border: none;
+}
 
 .section-title {
     text-align: center;
