--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -8,6 +8,43 @@
 
 
 {% block content %}
-    <h1>Cart</h1>
+<div class="cart-container">
+    <table>
+        <div class="continue-shopping">
+            <a href="{% url 'home' %}"><button>&larr; Continue Shopping</button></a>
+        </div>
+        <hr>
+        <thead>
+            <tr>
+                <th>Items: <strong>5</strong></th>
+                <th>Total: <strong>$ 500</strong></th>
+                <th class="checkout"><a href="checkout.html"><button type="button">Checkout</button></a></th>
+            </tr>
+        </thead>
+    </table>
+
+    <div class="cart-elements-container">
+
+        <div class="cart-element-header">
+            <div class="cart-item-image"></div>
+            <div class="cart-item-name"><strong>Item</strong></div>
+            <div class="cart-item-quantity"><strong>Quantity</strong></div>
+            <div class="cart-item-total"><strong>Total</strong></div>
+        </div>
+        <hr>
+        <div class="cart-element">
+            <div class="cart-item-image"><img src="images/apples-805124.jpg" alt="" width="20%"></div>
+            <div class="cart-item-name">Product 1</div>
+            <div class="cart-item-quantity">3 
+                <p><span>&#9652</span><span>&#9662</span></p>
+            </div>
+            <div class="cart-item-total">$ 30</div>
+        </div>
+
+        
+
+        
+    </div>
+</div>
 {% endblock content %}
     
