--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'css/product.css' %}">
     <link rel="stylesheet" href="{% static 'css/cart.css' %}">
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
 </head>
 <body>
     <div class="body-container">
