--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -18,7 +18,7 @@
             <tr>
                 <th>Items: <strong>5</strong></th>
                 <th>Total: <strong>$ 500</strong></th>
-                <th class="checkout"><a href="checkout.html"><button type="button">Checkout</button></a></th>
+                <th class="checkout"><a href="{% url 'checkout' %}"><button type="button">Checkout</button></a></th>
             </tr>
         </thead>
     </table>
